Changes for 4.0.0alpha7

New features:
..F....... [ZBXNEXT-4528] added link to Zabbix official support page (Andzs, ashubin)
........S. [ZBXNEXT-4520] added values to boolean mapping: "ok, master" as 1 and "err, slave" as 0 (viktors)
..F....... [ZBXNEXT-4185] added support of multiple items in "Plain text" widget (ashubin)

Bug fixes:
..F....... [ZBX-12603] fixed tab navigation and keyboard interaction in dashboard sharing and properties dialogues; added validation inside popups (miks, vmurzins)
........S. [ZBX-13043] removed error message for when user has defined media but all of them are disabled (viktors)
........S. [ZBX-14312] fixed possible deadlock in history syncer when housekeeper is deleting events (vso)
..F....... [ZBX-13697] fixed session expiration when changing default authentication method (miks)
..F....... [ZBX-13768] fixed disabled 'add' button showing in templated item preprocesing form (miks)
A.F....... [ZBX-13680] fixed action not being cloned due to existing operation id being submitted (agriscenko)
..F....... [ZBX-13775] fixed map tree widget border color (Andzs)
..F....... [ZBX-13780] fixed status color styles (Andzs)
..F....... [ZBX-12350] fixed severity picker styles (Andzs, ashubin)
...G...PS. [ZBX-13782] fixed decoding of Unicode characters in JSON (Andris)
..F....... [ZBX-13767] fixed "undefined index: acknowledges" error on problems page (agriscenko)
..F....... [ZBX-12175] fixed subfilter entries with long names going off the screen (agriscenko, Andzs)
..F....... [ZBX-12644] fixed filter being partially reset when using pagination in availability report page (Ivo)
........S. [ZBX-12390] fixed problem when triggers might not use correct value if an item values within one second were received in wrong historical order (wiper)
.......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)
........S. [ZBX-14313] fixed trigger level correlation when multiple tags are set (wiper)