@@ -64,12 +64,8 @@ zabbix_proxy_LDADD = \
 	$(top_srcdir)/src/libs/zbxdb/libzbxdb.a \
 	$(top_srcdir)/src/libs/zbxmodules/libzbxmodules.a \
 	$(top_srcdir)/src/libs/zbxtasks/libzbxtasks.a \
-	$(top_srcdir)/src/libs/zbxcompress/libzbxcompress.a 
+	$(top_srcdir)/src/libs/zbxcompress/libzbxcompress.a
 	$(top_srcdir)/src/libs/zbxtasks/libzbxtasks.a
-
-if PROXY_IPCSERVICE
-zabbix_proxy_LDADD += $(top_srcdir)/src/libs/zbxipcservice/libzbxipcservice.a
-endif
 
 zabbix_proxy_LDADD += $(top_srcdir)/src/libs/zbxalgo/libzbxalgo.a
 
@@ -90,7 +86,7 @@ zabbix_proxy_CFLAGS = \
 	-DDEFAULT_LOAD_MODULE_PATH="\"@LOAD_MODULE_PATH@\""
 
 install-data-hook:
-	$(MKDIR_P) "@PROXY_CONFIG_FILE@.d"
-	$(MKDIR_P) "@EXTERNAL_SCRIPTS_PATH@"
-	$(MKDIR_P) "@LOAD_MODULE_PATH@"
-	test -f "@PROXY_CONFIG_FILE@" || cp "../../conf/zabbix_proxy.conf" "@PROXY_CONFIG_FILE@"
+	$(MKDIR_P) "$(DESTDIR)@PROXY_CONFIG_FILE@.d"
+	$(MKDIR_P) "$(DESTDIR)@EXTERNAL_SCRIPTS_PATH@"
+	$(MKDIR_P) "$(DESTDIR)@LOAD_MODULE_PATH@"
+	test -f "$(DESTDIR)@PROXY_CONFIG_FILE@" || cp "../../conf/zabbix_proxy.conf" "$(DESTDIR)@PROXY_CONFIG_FILE@"
